--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2"
+    "@testing-library/react": "^12.1.2",
+    "babel-preset-react": "^6.24.1",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.65.0"
   }
 }
