--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+{ 
+  "homepage": "http://azuryte5.github.io/photo-port",
   "name": "photo-port",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +41,7 @@
     "@testing-library/react": "^12.1.2",
     "babel-preset-react": "^6.24.1",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.65.0"
   }
