type in package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage": "http://azuryte5.github.io/photo-port",
+  "homepage": "http://azuryte5.github.io/photo-port-snap",
   "name": "photo-port",
   "version": "0.1.0",
   "private": true,
